--- a/views/layouts/quickView.ejs
+++ b/views/layouts/quickView.ejs
@@ -26,7 +26,7 @@
                     <!-- Product Details -->
                     <div class="col-lg-6 col-md-12">
                         <div class="detail-info">
-                            <h2 id="quickViewName" class="title-detail text-center" style="margin-top: 20px;">
+                            <h2 id="quickViewName" class="title-detail text-center" style="margin-top: 10px;">
                             </h2>
                         </div>
                         <hr>
@@ -51,10 +51,10 @@
                                 <span id="quickViewGender"></span>
                             </div>
                         </div>
+                        <div class="text-center">
+                            <p><strong>₹</strong> <span id="quickViewPrice"></span></p>
+                        </div>
                         <div class="product-detail-rating">
-                            <div class="product-card__price d-flex">
-                                <p><strong>₹</strong> <span id="quickViewPrice"></span></p>
-                            </div>
                             <div class="attr-detail attr-size">
                                 <strong class="mr-10">
                                     <i class="fa fa-tshirt" aria-hidden="true"></i>
